Blood donation 2.1 first draft

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -2,8 +2,30 @@
 
 \section{Εθελοντική αιμοδοσία}
 	\subsection{Εισαγωγή}
-	\subsection{Κατηγορίες αιμοδοτών}
-		NVD,LVD,RVD
+	Το αίμα αποτελεί ένα ανεκτίμητο προϊόν ζωής. Χωρίς της επαρκή ποσότητα αίματος, τα κύτταρα του ανθρώπινου σώματος δεν μπορούν να λάβουν το οξυγόνο και τα θρεπτικά συστατικά που τους είναι απαραίτητα για να επιβιώσουν. Επιπλέον το σώμα δεν θα μπορούσε να αντιμετωπίσει βλαπτικούς παράγοντες, να αποβάλει τοξικά προϊόντα και να ρυθμίσει τις παραμέτρους του εσωτερικού του περιβάλλοντος \cite{circulatorySystem}. Αν και η τεράστια αξία και χρησιμότητα του αίματος είναι αδιαμφισβήτητη η ύπαρξη αρκετών εθελοντικών αιμοδοσιών για να καλυφθούν οι ανάγκες για αίμα αποτελεί μείζων πρόβλημα.
+	
+	Με τον όρο αιμοδοσία εννοούμε τη χορήγηση αίματος με την μετάγγιση και κατ' επέκταση την όλη οργάνωση που ασχολείται με τη λήψη, επεξεργασία, συντήρηση και διάθεση του αίματος και των Παραγώγων του. Ως επιστημονικός τομέας, η αιμοδοσία αποτελεί ιδιαίτερο κλάδο της αιματολογίας με τεράστια ανάπτυξη τα τελευταία 20 χρόνια. Η αιμοδοσία σαν φοβερά εξειδικευμένος τομέας πλαισιώνεται με επιστημονικό, νοσηλευτικό και τεχνικό προσωπικό υψηλής στάθμης με εξειδίκευση στο τομέα της αιμοδοσίας. 
+	
+	Η αιμοδοσία αποτελεί ύψιστη έκφραση του εθελοντισμού, προσφοράς και αλληλεγγύης προς το συνάνθρωπο: δίνεις αίμα –δίνεις ζωή. Η αιμοδοσία είναι το τμήμα εκείνο του νοσοκομείου που έχει αναλάβει τη συλλογή, τον έλεγχο και την διάθεση του αίματος και των παραγώγων του.
+	
+	Η μετάγγιση αίματος γίνεται τακτικά σε εγχειρήσεις, τραυματίες, γαστρορραγίες και σε τοκετούς για την αναπλήρωση της απώλειας σημαντικής ποσότητας αίματος. Ακόμα, σε μερικές γενετικές διαταραχές, όπως αιμορροφιλία, η μεσογειακή αναιμία η οποία επηρεάζει το σχήμα των ερυθροκυττάρων και αυτό συνεπάγεται μείωση της λειτουργικότητας και συνακόλουθη καταστροφή τους. Ακόμη, σε ασθενείς με χρόνια νοσήματα όπως λευχαιμία, χρόνια νεφρική ανεπάρκεια, κακοήθεια. Τα άτομα που πάσχουν από αυτές τις διαταραχές χρειάζονται τακτικές μεταγγίσεις ασφαλούς αίματος και παραγώγων (πλάσμα, αιμοπετάλια) για την αναπλήρωση των παθολογικών συστατικών του αίματος τους.
+	
+	 Το αίμα που χρησιμοποιείται στις μεταγγίσεις πρέπει να προέρχεται από υγιή άτομα. Το αίμα δεν είναι μόνο ζωντανός ιστός, αλλά έχει επιπλέον την ιδιότητα να ανανεώνεται και τα υγιή άτομα διαθέτουν μηχανισμούς αύξησης της παραγωγής αίματος. Έτσι με την αιμοδοσία προσφέρεται εύκολα το δώρο της ζωής χωρίς το φόβο ότι η τακτική αιμοδοσία θα προκαλέσει εξασθένηση του οργανισμού και θα οδηγήσει σε αδυναμία η επιτάχυνση της γήρανσης.
+	 
+	Στόχος είναι οι εθελοντές, που πληρούν τα κριτήρια για αιμοδοσία να γίνονται τακτικοί αιμοδότες, δηλαδή να πραγματοποιούν δωρεά αίματος αρκετές φορές το χρόνο και να παραμένουν στον κατάλογο των ενεργών αιμοδοτών για πολλά χρόνια. Η διατήρηση ενός υψηλού επιπέδου ποιότητας παρεχόμενων υπηρεσιών στην υπηρεσία αιμοδοσίας συνίσταται στην προτεραιότητα ικανοποίησης των αναγκών και των προσδοκιών των εθελοντών αιμοδοτών. Ωστόσο είναι σημαντικό να επισημάνουμε ότι μια επένδυση στην προσέλκυση και την διατήρηση εθελοντών, δεν θα αποδώσει μόνο ασφαλή αποθέματα αίματος και προστασία της υγείας τόσο στον δότη όσο και στον λήπτη, αλλά και σημαντική εξοικονόμηση κόστους για την υπηρεσία μέσω της μείωσης του αριθμού μονάδων αίματος που πρέπει να απορριφθούν λόγω της ανεύρεσης θετικών δεικτών λοιμωδών νοσημάτων. 
+	
+	Επιπλέον η προσέλκυση και η διατήρηση των εθελοντών αιμοδοτών είναι μια δυναμική λειτουργία που σχεδιάζεται κάθε φορά ανάλογα με την μελέτη και ανάλυση των παραμέτρων της συγκεκριμένης κοινωνικής ομάδας που απευθυνόμαστε σε σχέση με την αξιολόγηση και εκτίμηση των αναγκών σε αίμα και την υπάρχουσα κατάσταση στο χώρο της.
+	\subsection{Εθελοντές αιμοδότες}
+		\subsubsection{Κριτήρια επιλογής αιμοδοτών}  
+			Βασικός στόχος της επιλογής αιμοδοτών είναι να καθοριστεί ότι ο αιμοδότης βρίσκεται σε καλή φυσική κατάσταση ώστε να προφυλαχθεί η δική του/της υγεία και να προστατευθεί ο αιμολήπτης ασθενής από τη μετάδοση ασθενειών ή φαρμακευτικών ουσιών που θα τον έβλαπταν. Ο υποψήφιος αιμοδότης κατά τη λήψη του ιστορικού πρέπει να αναφέρει τυχόν συμπτώματα, ώστε να βοηθήσει το ιατρικό προσωπικό να κρίνει με ασφάλεια. Κάθε πρόβλημα υγείας που ενδεχομένως έχει ο υποψήφιος αιμοδότης, πρέπει να συζητείται με τον υπεύθυνο γιατρό της αιμοδοσίας, ο οποίος κρίνει τελικά για τη καταλληλότητα της αιμοληψίας. 
+			
+			Ο αιμοδότης πρέπει να είναι σε καλή υγεία και απαλλαγμένος από μεταδοτικές ασθένειες. Όμως κάθε άνθρωπος είναι επιρρεπής σε μικρο-αδιαθεσίες. Αυτές είναι πόνοι κάθε είδους, ακμή, πονόλαιμοι και δυσπεψία. Όλα αυτά δεν αποτελούν στοιχεία απόρριψης του αιμοδότη. Εάν ο δότης υποβάλλεται σε φαρμακευτική αγωγή ή έχει υποβληθεί στο άμεσο παρελθόν, πρέπει να σημειωθούν τα παρακάτω σχετικά με τα φάρμακα που παίρνει. Η ποσότητα του φαρμάκου, δηλαδή η πυκνότητα του φαρμάκου στον οργανισμό του δότη και η ταχύτητα απορρόφησης ή η αποβολή του. Το φάρμακο μπορεί να έχει δυσμενή επίπτωση στο δέκτη εφόσον η περιεκτικότητα του φαρμάκου στο δότη είναι αυξημένη. Εάν ο δέκτης είναι αλλεργικός σ' αυτό το φάρμακο ή εάν ο δέκτης είναι έγκυος γυναίκα μπορεί να προκληθούν τερατογόνες διαταραχές. Το φάρμακο μπορεί να διαταράξει το αίμα του δότη, π.χ. τη λειτουργικότητα των αιμοπεταλίων. Παρόλο ότι τα φαινόμενα αυτά έχουν αναγνωριστεί, η συχνότητά τους δεν μελετήθηκε ακόμη καλά. Εάν λοιπόν ο αιμοδότης λαμβάνει φάρμακα, δεν σημαίνει ότι αναγκαστικά δεν μπορεί να προσφέρει αίμα. Σε κάθε περίπτωση όμως είναι ορθό να ενημερώνεται ο γιατρός και το προσωπικό για τα φάρμακα που λαμβάνει και ανάλογα θα κριθεί εάν μπορεί να προσφέρει αίμα. 
+			
+		Σε περίπτωση προσωρινού ή μόνιμου αποκλεισμού από αιμοδοσία, ο γιατρός δίνει την κατάλληλη συμβουλή. Η καλή επικοινωνία μεταξύ του αιμοδότη και του προσωπικού της αιμοδοσίας διατηρεί τη σχέση εμπιστοσύνης και διασφαλίζει την καλή ποιότητα του αίματος που παρέχεται στους ασθενείς που χρειάζονται αίμα και τα παράγωγά του. Αίμα μπορούν να δώσουν όλοι οι υγιείς άντρες και γυναίκες ηλικίας 18 - 62 ετών, κάθε 3 - 4 μήνες. 
+
+Αίμα δεν μπορούν να δώσουν όσοι πάσχουν από διάφορα νοσήματα ή παθολογικές καταστάσεις που απαγορεύουν οριστικά ή πρόσκαιρα την αιμοδοσία. Ο αποκλεισμός αυτός γίνεται: για να μην επιβαρυνθεί η υγεία του αιμοδότη και για να διασφαλιστεί η ποιότητα του αίματος που θα μεταγγιστεί στο λήπτη.
+		\subsubsection{Κατηγορίες αιμοδοτών}
+			NVD,LVD,RVD
 	\subsection{Εθελοντική αιμοδοσία στην Ελλάδα}
 		βαλε και κοστος αιμοδοσιας απο το paper μαραντιδου
 	\subsection{Στατιστικά}
