--- a/references.bib
+++ b/references.bib
@@ -172,6 +172,7 @@
   Number                   = {3},
   Pages                    = {211--217},
   Volume                   = {95},
+
   ISSN                     = {1423-0410},
   Keywords                 = {blood donors, donor recruitment, intention, theory of planned behaviour},
   Owner                    = {ilias},
@@ -274,6 +275,17 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Doi                      = {10.1109/SACI.2012.6249994},
   Keywords                 = {cloud computing;cost reduction;health care;medical information systems;network operating systems;nonprofit organisations;open systems;paediatrics;ASP. NET pages;Azure platform;HL7 CCD standard;HL7 CDA standard;HL7 clinical document architecture standard;HL7 continuity of care document standard;Visual Studio .NET 2010 toolbox;cloud application;cloud computing;cost reduction;database tables;healthcare information system interoperability improvement;life expectancy;medical act;medical error reduction;medical informatics;medical information system;medical personal;pediatrics application;seamless care;standardized communication;Charge coupled devices;Databases;Immune system;Informatics;Standards;Tiles}
+}
+
+@Book{circulatorySystem,
+  Title                    = {The Circulatory System},
+  Author                   = {Susan Whittemore},
+  Editor                   = {Chelsea House},
+  Publisher                = {Chelsea House Pub},
+  Year                     = {2009},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.03}
 }
 
 @Article{Williamson,
