About blood donation First Draft

--- a/references.bib
+++ b/references.bib
@@ -20,8 +20,6 @@
   Number                   = {6},
   Pages                    = {1059--1078},
   Volume                   = {63},
-
-  __markedentry            = {[ilias:6]},
   ISSN                     = {1532-2890},
   Keywords                 = {research data sets, collaboration, information reuse, information policy, motivation},
   Owner                    = {ilias},
@@ -40,6 +38,49 @@
   Doi                      = {10.1109/IEMBS.2001.1019587},
   ISSN                     = {1094-687X},
   Keywords                 = {ISO standards;document handling;electrocardiography;groupware;health care;medical information systems;middleware;open systems;telemedicine;Clinical Document Architecture;DICOM 3;HL7/CDA framework;ISO standard;SCP-ECG;WebOnCOLL collaboration infrastructure;cardiology;clinical document templates;clinical documents;deployment;design;emerging telemedicine protocols;exchanged clinical content;guidelines;healthcare settings;imaging;interoperability;medical specialties;medical standards;middleware services;open standards;physical setting;regional healthcare networks;remote consultation services;specifications;telemedicine services;Biomedical imaging;Collaborative work;DICOM;Electrocardiography;Guidelines;ISO standards;Medical services;Middleware;Protocols;Telemedicine}
+}
+
+@Electronic{bloodDonationDefinition,
+  Title                    = {Blood donati},
+  Author                   = {Mayo Clinic},
+  Language                 = {English},
+  Organization             = {Mayo Clinic},
+  Url                      = {http://www.mayoclinic.org/tests-procedures/blood-donation/basics/definition/prc-20020069},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.03}
+}
+
+@Article{Custer2007,
+  Title                    = {The consequences of temporary deferral on future whole blood donation},
+  Author                   = {Custer, Brian and Chinn, Artina and Hirschler, Nora V. and Busch, Michael P. and Murphy, Edward L.},
+  Journal                  = {Transfusion},
+  Year                     = {2007},
+  Number                   = {8},
+  Pages                    = {1514--1523},
+  Volume                   = {47},
+  ISSN                     = {1537-2995},
+  Owner                    = {ilias},
+  Publisher                = {Blackwell Publishing Inc},
+  Timestamp                = {2015.10.03},
+  Url                      = {http://dx.doi.org/10.1111/j.1537-2995.2007.01292.x}
+}
+
+@Article{Custer2011,
+  Title                    = {Donor return after temporary deferral},
+  Author                   = {Custer, Brian and Schlumpf, Karen S. and Wright, David and Simon, Toby L. and Wilkinson, Susan and Ness, Paul M. and for the NHLBI Retrovirus Epidemiology Donor Study-II},
+  Journal                  = {Transfusion},
+  Year                     = {2011},
+  Number                   = {6},
+  Pages                    = {1188--1196},
+  Volume                   = {51},
+
+  __markedentry            = {[ilias:]},
+  ISSN                     = {1537-2995},
+  Owner                    = {ilias},
+  Publisher                = {Blackwell Publishing Inc},
+  Timestamp                = {2015.10.03},
+  Url                      = {http://dx.doi.org/10.1111/j.1537-2995.2010.02989.x}
 }
 
 @Article{TRF:TRF04402,
@@ -101,6 +142,23 @@
   Timestamp                = {2015.09.29}
 }
 
+@Article{1973,
+  Author                   = {Feingold, Eugene},
+  Journal                  = {Medical Care},
+  Year                     = {1973},
+  Number                   = {3},
+  Pages                    = {pp. 261-263},
+  Volume                   = {11},
+
+  Copyright                = {Copyright © 1973 Lippincott Williams & Wilkins},
+  ISSN                     = {00257079},
+  Jstor_articletype        = {book-review},
+  Jstor_formatteddate      = {May - Jun., 1973},
+  Language                 = {English},
+  Publisher                = {Lippincott Williams \& Wilkins},
+  Url                      = {http://www.jstor.org/stable/3762883}
+}
+
 @Article{Fragoulakis,
   Title                    = {The Cost of Blood Collection in Greece: An Economic Analysis},
   Author                   = {Fragoulakis, Vassilis and Stamoulis, Kostas and Grouzi, Elisabeth and Maniadakis, Nikolaos},
@@ -136,6 +194,23 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.09.23}
+}
+
+@Article{Grindon1996,
+  Title                    = {Safe and Good Use of Blood in Surgery (SANGUIS). Girolamo Sirchia, Anna Maria Giovanetti, D.B.L. McClelland, Giovanni N. Fracchia},
+  Author                   = {Grindon, Alfred J.},
+  Journal                  = {Transfusion},
+  Year                     = {1996},
+  Number                   = {1},
+  Pages                    = {88--88},
+  Volume                   = {36},
+
+  __markedentry            = {[ilias:6]},
+  ISSN                     = {1537-2995},
+  Owner                    = {ilias},
+  Publisher                = {Blackwell Science Ltd},
+  Timestamp                = {2015.10.03},
+  Url                      = {http://dx.doi.org/10.1111/j.1537-2995.1996.tb05248.x}
 }
 
 @Electronic{grnetBlood,
@@ -209,8 +284,6 @@
   Number                   = {4},
   Pages                    = {236--244},
   Volume                   = {89},
-
-  __markedentry            = {[ilias:]},
   ISSN                     = {1423-0410},
   Keywords                 = {altruism, blood donor recruitment, blood donors, motivation for donating blood},
   Owner                    = {ilias},
@@ -237,6 +310,17 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.09.29}
+}
+
+@Book{bloodDonorSelection,
+  Title                    = {Blood donor selection},
+  Author                   = {World Health Organization},
+  Editor                   = {United States Centers for Disease Control and Prevention},
+  Publisher                = {World Health Organization},
+  Year                     = {2012},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.03}
 }
 
 @Electronic{WorldHealth,
@@ -304,6 +388,17 @@ URN: urn:nbn:de:0114-fqs0501297},
   Publisher                = {Elsevier},
   Timestamp                = {2015.09.14},
   Url                      = {http://dx.doi.org/10.1016/S0140-6736(13)60631-5}
+}
+
+@Electronic{aboutBlood,
+  Title                    = {Blood 101 (All about blood)},
+  Author                   = {BloodCenter of Wisconsin},
+  Language                 = {English},
+  Organization             = {BloodCenter of Wisconsin},
+  Url                      = {https://www.bcw.edu/bcw/Blood-Donation/all-about-blood/index.htm},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.03}
 }
 
 @Book{GamificationDesign,
