--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -2,11 +2,13 @@
 
 \section{Εθελοντική αιμοδοσία}
 	\subsection{Εισαγωγή}
-	Το αίμα αποτελεί ένα ανεκτίμητο προϊόν ζωής. Χωρίς της επαρκή ποσότητα αίματος, τα κύτταρα του ανθρώπινου σώματος δεν μπορούν να λάβουν το οξυγόνο και τα θρεπτικά συστατικά που τους είναι απαραίτητα για να επιβιώσουν. Επιπλέον το σώμα δεν θα μπορούσε να αντιμετωπίσει βλαπτικούς παράγοντες, να αποβάλει τοξικά προϊόντα και να ρυθμίσει τις παραμέτρους του εσωτερικού του περιβάλλοντος \cite{circulatorySystem}. Αν και η τεράστια αξία και χρησιμότητα του αίματος είναι αδιαμφισβήτητη η ύπαρξη αρκετών εθελοντικών αιμοδοσιών για να καλυφθούν οι ανάγκες για αίμα αποτελεί μείζων πρόβλημα.
+	Το αίμα είναι το σπουδαιότερο βιολογικό υγρό του ανθρώπινου οργανισμού και αποτελεί ένα ανεκτίμητο προϊόν ζωής. Χωρίς της επαρκή ποσότητα αίματος, τα κύτταρα του ανθρώπινου σώματος δεν μπορούν να λάβουν το οξυγόνο και τα θρεπτικά συστατικά που τους είναι απαραίτητα για να επιβιώσουν \cite{aboutBlood}. Επιπλέον το σώμα δεν θα μπορούσε να αντιμετωπίσει βλαπτικούς παράγοντες, να αποβάλει τοξικά προϊόντα και να ρυθμίσει τις παραμέτρους του εσωτερικού του περιβάλλοντος \cite{circulatorySystem}. Αν και η τεράστια αξία και χρησιμότητα του αίματος είναι αδιαμφισβήτητη η ύπαρξη αρκετών εθελοντικών αιμοδοσιών για να καλυφθούν οι ανάγκες για αίμα αποτελεί μείζων πρόβλημα.
 	
-	Με τον όρο αιμοδοσία εννοούμε τη χορήγηση αίματος με την μετάγγιση και κατ' επέκταση την όλη οργάνωση που ασχολείται με τη λήψη, επεξεργασία, συντήρηση και διάθεση του αίματος και των Παραγώγων του. Ως επιστημονικός τομέας, η αιμοδοσία αποτελεί ιδιαίτερο κλάδο της αιματολογίας με τεράστια ανάπτυξη τα τελευταία 20 χρόνια. Η αιμοδοσία σαν φοβερά εξειδικευμένος τομέας πλαισιώνεται με επιστημονικό, νοσηλευτικό και τεχνικό προσωπικό υψηλής στάθμης με εξειδίκευση στο τομέα της αιμοδοσίας. 
-	
-	Η αιμοδοσία αποτελεί ύψιστη έκφραση του εθελοντισμού, προσφοράς και αλληλεγγύης προς το συνάνθρωπο: δίνεις αίμα –δίνεις ζωή. Η αιμοδοσία είναι το τμήμα εκείνο του νοσοκομείου που έχει αναλάβει τη συλλογή, τον έλεγχο και την διάθεση του αίματος και των παραγώγων του.
+	Με τον όρο αιμοδοσία εννοούμε τη χορήγηση αίματος από υγιείς δότες σε άτομα στα
+οποία η κατάσταση της υγείας τους απαιτεί μετάγγιση. Κατ' επέκταση με τον όρο αιμοδοσία εννοούμε την όλη οργάνωση που ασχολείται με τη λήψη, επεξεργασία, συντήρηση και διάθεση του αίματος και των Παραγώγων του \cite{bloodDonationDefinition}. Η αιμοδοσία καλείται εθελοντική, επειδή αφορά σε πράξη που εκτελεί κάποιος με τη θέλησή του και με μοναδικά κίνητρα αισθήματα αλληλεγγύης και αλτρουισμού \cite{1973}. 
+
+Ως επιστημονικός τομέας, η αιμοδοσία αποτελεί ιδιαίτερο κλάδο της αιματολογίας με τεράστια ανάπτυξη τα τελευταία 20 χρόνια. Η ανάπτυξη της αιμοδοσίας ως εξειδικευμένου τομέα, καθώς και η αλματώδης ανάπτυξή της, οδήγησαν στην ανάγκη να πλαισιώνεται από ιατρικό, νοσηλευτικό και τεχνικό προσωπικό υψηλής στάθμης με εξειδίκευση στον τομέα της
+αιμοδοσίας.  
 	
 	Η μετάγγιση αίματος γίνεται τακτικά σε εγχειρήσεις, τραυματίες, γαστρορραγίες και σε τοκετούς για την αναπλήρωση της απώλειας σημαντικής ποσότητας αίματος. Ακόμα, σε μερικές γενετικές διαταραχές, όπως αιμορροφιλία, η μεσογειακή αναιμία η οποία επηρεάζει το σχήμα των ερυθροκυττάρων και αυτό συνεπάγεται μείωση της λειτουργικότητας και συνακόλουθη καταστροφή τους. Ακόμη, σε ασθενείς με χρόνια νοσήματα όπως λευχαιμία, χρόνια νεφρική ανεπάρκεια, κακοήθεια. Τα άτομα που πάσχουν από αυτές τις διαταραχές χρειάζονται τακτικές μεταγγίσεις ασφαλούς αίματος και παραγώγων (πλάσμα, αιμοπετάλια) για την αναπλήρωση των παθολογικών συστατικών του αίματος τους.
 	
@@ -16,21 +18,29 @@
 	
 	Επιπλέον η προσέλκυση και η διατήρηση των εθελοντών αιμοδοτών είναι μια δυναμική λειτουργία που σχεδιάζεται κάθε φορά ανάλογα με την μελέτη και ανάλυση των παραμέτρων της συγκεκριμένης κοινωνικής ομάδας που απευθυνόμαστε σε σχέση με την αξιολόγηση και εκτίμηση των αναγκών σε αίμα και την υπάρχουσα κατάσταση στο χώρο της.
 	\subsection{Εθελοντές αιμοδότες}
-		\subsubsection{Κριτήρια επιλογής αιμοδοτών}  
-			Βασικός στόχος της επιλογής αιμοδοτών είναι να καθοριστεί ότι ο αιμοδότης βρίσκεται σε καλή φυσική κατάσταση ώστε να προφυλαχθεί η δική του/της υγεία και να προστατευθεί ο αιμολήπτης ασθενής από τη μετάδοση ασθενειών ή φαρμακευτικών ουσιών που θα τον έβλαπταν. Ο υποψήφιος αιμοδότης κατά τη λήψη του ιστορικού πρέπει να αναφέρει τυχόν συμπτώματα, ώστε να βοηθήσει το ιατρικό προσωπικό να κρίνει με ασφάλεια. Κάθε πρόβλημα υγείας που ενδεχομένως έχει ο υποψήφιος αιμοδότης, πρέπει να συζητείται με τον υπεύθυνο γιατρό της αιμοδοσίας, ο οποίος κρίνει τελικά για τη καταλληλότητα της αιμοληψίας. 
+		\subsubsection{Κριτήρια επιλογής αιμοδοτών} 
+			Βασικός στόχος και υποχρέωση των υπηρεσιών μετάγγισης αίματος είναι να συλλέξουν αίμα από υγιείς αιμοδότες, ώστε αφενός να προφυλαχθεί η δική τους υγεία και αφετέρου να προστατευθεί ο αιμολήπτης ασθενής από τη μετάδοση ασθενειών ή φαρμακευτικών ουσιών που μπορεί δυνητικά να είναι βλαβερά για την υγεία του. Ο υποψήφιος αιμοδότης κατά τη λήψη του ιστορικού πρέπει να αναφέρει τυχόν συμπτώματα, ώστε να βοηθήσει το ιατρικό προσωπικό να κρίνει με ασφάλεια την πιθανότητα κινδύνου. Κάθε πρόβλημα υγείας που ενδεχομένως έχει ο υποψήφιος αιμοδότης, πρέπει να συζητείται με τον υπεύθυνο γιατρό της αιμοδοσίας, ο οποίος και κρίνει τελικά για τη καταλληλότητα της αιμοληψίας. Η διαδικασία θα πρέπει να είναι τέτοια έτσι ώστε και να εξασφαλίζεται ασφαλή αιμοδοσία και παροχή αίματος αλλά και να μην απορρίπτονται υγιείς αιμοδότες οι οποίοι θα μπορούσαν να συνεισφέρουν \cite{bloodDonorSelection}.
 			
-			Ο αιμοδότης πρέπει να είναι σε καλή υγεία και απαλλαγμένος από μεταδοτικές ασθένειες. Όμως κάθε άνθρωπος είναι επιρρεπής σε μικρο-αδιαθεσίες. Αυτές είναι πόνοι κάθε είδους, ακμή, πονόλαιμοι και δυσπεψία. Όλα αυτά δεν αποτελούν στοιχεία απόρριψης του αιμοδότη. Εάν ο δότης υποβάλλεται σε φαρμακευτική αγωγή ή έχει υποβληθεί στο άμεσο παρελθόν, πρέπει να σημειωθούν τα παρακάτω σχετικά με τα φάρμακα που παίρνει. Η ποσότητα του φαρμάκου, δηλαδή η πυκνότητα του φαρμάκου στον οργανισμό του δότη και η ταχύτητα απορρόφησης ή η αποβολή του. Το φάρμακο μπορεί να έχει δυσμενή επίπτωση στο δέκτη εφόσον η περιεκτικότητα του φαρμάκου στο δότη είναι αυξημένη. Εάν ο δέκτης είναι αλλεργικός σ' αυτό το φάρμακο ή εάν ο δέκτης είναι έγκυος γυναίκα μπορεί να προκληθούν τερατογόνες διαταραχές. Το φάρμακο μπορεί να διαταράξει το αίμα του δότη, π.χ. τη λειτουργικότητα των αιμοπεταλίων. Παρόλο ότι τα φαινόμενα αυτά έχουν αναγνωριστεί, η συχνότητά τους δεν μελετήθηκε ακόμη καλά. Εάν λοιπόν ο αιμοδότης λαμβάνει φάρμακα, δεν σημαίνει ότι αναγκαστικά δεν μπορεί να προσφέρει αίμα. Σε κάθε περίπτωση όμως είναι ορθό να ενημερώνεται ο γιατρός και το προσωπικό για τα φάρμακα που λαμβάνει και ανάλογα θα κριθεί εάν μπορεί να προσφέρει αίμα. 
+			Ο αιμοδότης πρέπει να είναι σε καλή υγεία και απαλλαγμένος από μεταδοτικές ασθένειες. Όμως κάθε άνθρωπος είναι επιρρεπής σε μικρο-αδιαθεσίες. Αυτές είναι πόνοι κάθε είδους, ακμή, πονόλαιμοι και δυσπεψία. Όλα αυτά δεν αποτελούν στοιχεία απόρριψης του αιμοδότη. Εάν ο δότης υποβάλλεται σε φαρμακευτική αγωγή ή έχει υποβληθεί στο άμεσο παρελθόν, πρέπει να σημειωθούν τα παρακάτω σχετικά με τα φάρμακα που παίρνει. Η ποσότητα του φαρμάκου, δηλαδή η πυκνότητα του φαρμάκου στον οργανισμό του δότη και η ταχύτητα απορρόφησης ή η αποβολή του. Το φάρμακο μπορεί να έχει δυσμενή επίπτωση στο δέκτη εφόσον η περιεκτικότητα του φαρμάκου στο δότη είναι αυξημένη. Εάν ο δέκτης είναι αλλεργικός σ' αυτό το φάρμακο ή εάν ο δέκτης είναι έγκυος γυναίκα μπορεί να προκληθεί μέχρι και τερατογένεση. Το φάρμακο μπορεί να διαταράξει το αίμα του δότη, π.χ. τη λειτουργικότητα των αιμοπεταλίων. Παρόλο ότι τα φαινόμενα αυτά έχουν αναγνωριστεί, η συχνότητά τους δεν μελετήθηκε ακόμη καλά. Εάν λοιπόν ο αιμοδότης λαμβάνει φάρμακα, δεν σημαίνει ότι αναγκαστικά δεν μπορεί να προσφέρει αίμα. Σε κάθε περίπτωση όμως είναι ορθό να ενημερώνεται ο γιατρός και το προσωπικό για τα φάρμακα που λαμβάνει και ανάλογα θα κριθεί εάν μπορεί να προσφέρει αίμα \cite{bloodDonorSelection}. 
 			
-		Σε περίπτωση προσωρινού ή μόνιμου αποκλεισμού από αιμοδοσία, ο γιατρός δίνει την κατάλληλη συμβουλή. Η καλή επικοινωνία μεταξύ του αιμοδότη και του προσωπικού της αιμοδοσίας διατηρεί τη σχέση εμπιστοσύνης και διασφαλίζει την καλή ποιότητα του αίματος που παρέχεται στους ασθενείς που χρειάζονται αίμα και τα παράγωγά του. Αίμα μπορούν να δώσουν όλοι οι υγιείς άντρες και γυναίκες ηλικίας 18 - 62 ετών, κάθε 3 - 4 μήνες. 
-
-Αίμα δεν μπορούν να δώσουν όσοι πάσχουν από διάφορα νοσήματα ή παθολογικές καταστάσεις που απαγορεύουν οριστικά ή πρόσκαιρα την αιμοδοσία. Ο αποκλεισμός αυτός γίνεται: για να μην επιβαρυνθεί η υγεία του αιμοδότη και για να διασφαλιστεί η ποιότητα του αίματος που θα μεταγγιστεί στο λήπτη.
+		Υπάρχουν καταστάσεις και νοσήματα που αποκλείουν δια παντός την αιμοδοσία, όπως είναι το AIDS, οι ηπατίτιδες, η ελονοσία, η χρήση ενδοφλεβίων ναρκωτικών, οι κακοήθειες, η υπέρταση, ο σακχαρώδης διαβήτης ή σοβαρά χρόνια νοσήματα. Στις περισσότερες περιπτώσεις, όμως, ο αποκλεισμός είναι μόνο πρόσκαιρος.  Ο αποκλεισμός αυτός γίνεται για να μην επιβαρυνθεί η υγεία του αιμοδότη και για να διασφαλιστεί η ποιότητα του αίματος που θα μεταγγιστεί στο λήπτη. Μελέτες έχουν δείξει ότι ο προσωρινός αποκλεισμός από την αιμοδοσία έχει έντονο αρνητικό αντίκτυπο στην μελλοντική επιστροφή του αιμοδότη \cite{Custer2011}\cite{Custer2007}. Για αυτό είναι υψίστης σημασίας να δίνονται ξεκάθαρα διαστήματα αποκλεισμού και να ενθαρρύνονται οι εθελοντές να επιστρέψουν μετά το πέρας αυτού του διαστήματος. Στο σύστημα που προτείνουμε στη παρόν διπλωματική έχει γίνει μέριμνα για τέτοιες περιπτώσεις και προτείνετε ένα σύστημα κατάλληλων ειδοποιήσεων.
+		
+		Η καλή επικοινωνία μεταξύ του αιμοδότη και του προσωπικού της αιμοδοσίας διατηρεί τη σχέση εμπιστοσύνης και διασφαλίζει την καλή ποιότητα του αίματος που παρέχεται στους ασθενείς που χρειάζονται αίμα και τα παράγωγά του. Αίμα μπορούν να δώσουν όλοι οι υγιείς άντρες και γυναίκες ηλικίας 18 - 62 ετών, κάθε 3 - 4 μήνες. 
 		\subsubsection{Κατηγορίες αιμοδοτών}
 			NVD,LVD,RVD
+	\subsection{Ανάγκες μονάδων αίματος}		
 	\subsection{Εθελοντική αιμοδοσία στην Ελλάδα}
-		βαλε και κοστος αιμοδοσιας απο το paper μαραντιδου
-	\subsection{Στατιστικά}
-	\subsection{Παρούσα κατάσταση}
-		(ανάγκες, αγορά, ποσοστό κάλυψης αναγκών)
+		Στην Ελλάδα το "Εθνικό Κέντρο Αιμοδοσίας" (Ε.ΚΕ.Α) το οποίο στεγάζεται στο Υπουργείο Υγείας και Πρόνοιας αποτελεί το κεντρικό όργανο για την οργάνωση των Υπηρεσιών Αιμοδοσίας. Οι Υπηρεσίες Αιμοδοσίας μπορούν να διαχωριστούν στις παρακάτω τρεις κατηγορίες: 1) τα Κέντρα Αιμοδοσίας, 2) τους Σταθμούς Αιμοδοσίας Α' Τάξης και 3) τους Σταθμούς Αιμοδοσίας Β' Τάξης. Τα κέντρα Αιμοδοσίας καλύπτουν τις ανάγκες μιας ευρύτερης γεωγραφικής περιοχής ή μεγάλων πληθυσμιακών ομάδων και εδρεύουν σε νοσοκομεία. Οι Σταθμοί Αιμοδοσίας Α' Τάξης είναι μικρότερες υπηρεσίες και καλύπτουν τις ανάγκες του νοσοκομείου στο οποίο εδρεύουν και άλλες τοπικές ανάγκες. Οι Σταθμοί Αιμοδοσίας Β' Τάξης καλύπτουν αποκλειστικά τις ανάγκες του νοσοκομείου που στεγάζονται.
+		
+		Το σύστημα αιμοδοσίας στην Ελλάδα είναι αποκεντρωμένο και αποτελείται από 101 υπηρεσίες αιμοδοσίας υπό την αιγίδα και εποπτεία του Υπουργείου Υγείας\cite{filloKivernisews}. Κάθε υπηρεσία αιμοδοσίας αποτελεί ένα ενσωματωμένο μέρος ενός δημόσιου νοσοκομείου και οι αρμοδιότητές της περιλαμβάνουν α) τη στρατολόγηση νέων αιμοδοτών, β) τη συλλογή και τον έλεγχο του αίματος και γ) και τη διακίνηση του αίματος και των παραγώγων του στις νοσοκομειακές κλινικές \cite{Marantidou2007}.
+		
+		Σύμφωνα με επίσημα δεδομένου του Υπουργείου Υγείας οι ανάγκες για αίμα το έτος 2014 στην Ελλάδα ήταν 750.000 μονάδες. Ένα σημαντικός παράγοντας ο οποίος αυξάνει σημαντικά τις ανάγκες σε αίμα στην χώρα μας και δικαιολογεί το παραπάνω νούμερο, είναι τα υψηλά ποσοστά μεσογειακής αναιμίας για τα οποία χρειάζονται 144.000 μονάδες αίματος ανά χρόνο. 
+		
+		Σύμφωνα με στοιχεία που έδωσε στη δημοσιότητα το Εθνικό Κέντρο Αιμοδοσίας (Ε.ΚΕ.Α) κατά την διάρκεια του έτους 2013 έγινε εθελοντική αιμοδοσία 584.088 μονάδων αίματος, εκ των οποίων 254.198 (43.52 \%) προήλθε από τους επονομαζόμενους δότες αντικατάστασης (Replacement Donors - RDs),οι οποίοι αιμοδοτούν προκειμένου να καλύψουν τις ανάγκες που προκύπτουν από συγγενείς ή φίλους. Ένα ποσοστό 54.85 \% δηλαδή 320.411 μονάδες προέρχονται από εθελοντές αιμοδότες (Volunteer Donors - VDs), οι οποίοι αιμοδοτούν με δική τους πρωτοβουλία καθαρά για ανθρωπιστικούς λόγους. Οι υπόλοιπες 9.479 μονάδες (0.016\%) προέρχονται από τις ένοπλες δυνάμεις. Η τελευταία αυτή κατηγορία αιμοδοτών έχει δυνατά κίνητρα να αιμοδοτήσει εθελοντικά, καθώς αποζημιώνονται με άδειες και αποχή από τα καθήκοντά τους. Σε αυτό το σημείο κρίνεται σκόπιμο να αναφερθεί ότι τα τελευταία τρία χρόνια έχει παρατηρηθεί αύξηση στις εθελοντικές αιμοδοσίες. Συγκεκριμένα το 2013 παρασχεθήκανε από εθελοντές αιμοδότες (VDs) 21.234 περισσότερες μονάδες αίματος σε σύγκριση με το 2012 \cite{EKEA}. Παρότι τα παραπάνω νούμερα είναι ενθαρρυντικά και παρότι διακρίνεται μια αυξητική τάση των εθελοντικών αιμοδοσιών, αξίζει να σημειωθεί ότι 24.000 μονάδες αίματος εισήχθησαν από την Ελβετία, προκειμένου να καλυφθούν οι εθνικές ανάγκες για αίμα \cite{Marantidou2007}.
+		
+		Βάση επίσημων στοιχείων, η Ελλάδα διαθέτει έναν ευρύ κατάλογο αιμοδοτών βάσει του οποίου 6 αιμοδότες αντιστοιχούν σε 100 πολίτες, γεγονός που την κατατάσσει τρίτη ανάμεσα στις χώρες- μέλη της Ευρωπαϊκής Ένωσης όσον αφορά τον αριθμό των ατόμων οι οποίοι έχουν δωρίσει αίμα έστω και μία φορά στη ζωή τους  (Eurobarometer, 2009).  Επίσης, η Ελλάδα έρχεται πρώτη όσον αφορά τους μη αιμοδότες, οι οποίοι όμως έχουν σκεφτεί να δώσουν αίμα (Eurobarometer, 2005). Παρόλα τα στοιχεία αυτά όμως, η Ελλάδα που είναι μία χώρα 11.000.000 κατοίκων, πολύ συχνά βρίσκεται στη δυσάρεστη αλλά αναπόφευκτη θέση να εισάγει αίμα από το εξωτερικό, καθώς ο ετήσιος αριθμός μονάδων αίματος δεν επαρκεί για να καλυφθούν οι ανάγκες της χώρας. Αυτό συμβαίνει λόγω των υψηλών ποσοστών μεσογειακής αναιμίας όπως αναφέραμε και παραπάνω αλλά και λόγω ότι οι ανάγκες αίματος κατά τη διάρκεια διάφορων χειρουργικών επεμβάσεων είναι μεγαλύτερη στην Ελλάδα από ότι σε άλλες χώρες της Κεντρικής και Βόρειας Ευρώπης, όπως προκύπτει από την έρευνα του ασφαλούς και
+καλού αίματος \cite{Grindon1996} και προσπάθειες να ελαχιστοποιηθεί αυτή η αλόγιστη χρήση έχουν αποβεί προς το παρόν άκαρπες. 
+
 
 \section{Πληροφοριακά συστήματα αιμοδοσίας}
 	\subsection{Κατασταση στο εξωτερικο}
