--- a/Styles/softlab-thesis.cls
+++ b/Styles/softlab-thesis.cls
@@ -279,7 +279,7 @@
 %\def\font@sans{Liberation Sans}
 
 % typewriter font
-\def\font@tt{Liberation Mono}
+\def\font@tt{Times New Roman}
 %\def\font@tt{DejaVu Sans Mono}
 %\def\font@tt{Lucida Sans Typewriter}
 %\def\font@tt{Free Monospaced}
