--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -54,5 +54,36 @@
 
 \section{Κινδυνοι που προκύπτουν μέσα από αιμοδοσία (ασθένειες, ποσοστά)}
 	\subsection{Haemovigilance}
+Με τον όρο αιμοεπαγρύπνηση ορίζουμε ως ένα σύνολο οργανωμένων διαδικασιών επιτήρησης, που σχετίζονται με τα ανεπιθύμητα και μη αναμενόμενα συμβάντα και αντιδράσεις στους δότες και τους λήπτες των προϊόντων του αίματος και με την επιδημιολογική παρακολούθηση των αιμοδοτών. Η αιμοεπαγρύπνηση εστιάζει στις  επιπλοκές των δωρητών αίματος και στις ανεπιθύμητες αντιδράσεις των ληπτών και συμπεριλαμβάνει όλες τις επιπλοκές της “γραμμής παραγωγής αίματος”, τα ανεπιθύμητα συμβάματα, την αναλυτική και αναδρομική καταγραφή των γεγονότων και την προοπτική έγκαιρης προειδοποίησης με χρήση ενός συστήματος ταχείας έγερσης συναγερμών. Η αιμοεπαγρύπνηση είναι ένα ισχυρό εργαλείο το οποίο στοχεύει στην βελτίωση της ποιότητας των διαδικασιών μετάγγισης αίματος, δίνοντας προταιρεότητα στην ασφάλεια. Απώτερος στόχος της αιμοεπαγρύπνησης είναι η πρόληψη ανεπιθύμητων συμβαμάτων και αντιδράσεων. Εισαγάγει μεθόδους εντοπισμού σφαλμάτων, συμβαμάτων και αντιδράσεων και συμπεριλαμβάνει συστημάτα συναγερμού, συστήματα ιχνηλασιμότητας, συστημάτα ειδοποιήσεων και τους ελέγχους των πρακτικών.
+		Οι ουσιαστικοί στόχοι της διαδικασίας της αιμοεπαγρύπνησης είναι οι εξής:
+		\begin{itemize}
+		\item Να προληφθεί η επανεμφάνιση ανεπιθύμητων συμβαμάτων και αντιδράσεων 
+		\item Στη βελτίωση της πρακτικής μετάγγισης στα νοσοκομεία με τη λήψη προληπτικών ή διορθωτικών μέτρων όπου επιβάλλεται 
+		\item Στην ανάπτυξη εθνικών κατευθυντήριων οδηγιών και νοσοκομειακών πρωτοκόλλων 
+		\item Στη διαμόρφωση αποφάσεων σε εθνικό επίπεδο που αφορούν στην ασφάλεια των μεταγγίσεων 
+		\item Στην εκπαίδευση των γιατρών που χρησιμοποιούν το αίμα, καθώς και των ασθενών που μεταγγίζονται 
+		\end{itemize}
+
+		Απαραίτητη προυπόθεση για την αποτελεσματική λειτουργία της αιμοεπαγρύπνησης είναι η 	ύπαρξη συστήματος ιχνηλασιμότητας. Ιχνηλασιμότητα ή ανιχνευσιμότητα (traceability) ορίζεται η ικανότητα πλήρους εντοπισμού καθεμίας μονάδας αίματος ή παραγώγων   		της από τον δότη μέχρι τον τελικό αποδέκτη. Επιτυγχάνεται  με ακριβείς και πλήρεις διαδικασίες αναγνώρισης κάθε δότη, κάθε συλλεγόμενης μονάδας αίματος, καθώς και όλων των παραγώγων του, τήρησης αρχείων και επισήμανσης καθώς και πλήρης διαδικασίας επαλήθευσης της παροχής και μετάγγισης αίματος.Με καταγραφή και μελέτη των απαραιτήτων  δεδομένων για την ιχνηλασιμότητα παράγουμε στατιστικά στοιχεία τα οποία αφορούν : στο  σύνολο των ασθενών που έχουν μεταγγισθεί , στις μονάδες ή στα παραγώγα αίματος που  έχουν χρησιμοποιηθεί, στους εθελοντές αιμοδότες που έχουν δώσει τις μονάδες αίμοτος και στα προϊόντα αίματος που μεταγγίσθηκαν. 
+		Τα ανεπιθύμητα συμβάματα τα οποία μπορούν να προκύψουν χωρίζονται στις εξής βασικές 	κατηγορίες:
+	
+		\begin{itemize}
+		\item	 Σοβαρή ανεπιθύμητη αντίδραση (Serious Adverse Reaction, SAR)
+		 “μια άνευ προθέσεως αντίδραση του δότη ή του ασθενούς που σχετίζεται με τη συλλογή ή τη μετάγγιση αίματος ή παραγώγων του 			και η οποία είναι θανατηφόρα, απειλητική για τη ζωή, προκαλεί αναπηρία ή ανικανότητα ή έχει ως αποτέλεσμα ή παρατείνει τη 					νοσηλεία ή τη νοσηρότητα”, (Οδηγία 2002/98/ΕΚ)
+ 		\\item Σοβαρό ανεπιθύμητο συμβάν (Serious Adverse Event , SAE)
+ 		“κάθε ατυχές περιστατικό που σχετίζεται με τη συλλογή, τον έλεγχο, την επεξεργασία, την αποθήκευση και τη διανομή αίματος ή 				παραγώγου του, που θα μπορούσε να προκαλέσει το θάνατο, να απειλήσει τη ζωή, ή να προκαλέσει αναπηρία ή ανικανότητα ή να 				έχει ως αποτέλεσμα ή να παρατείνει τη νοσηλεία ή τη νοσηρότητα” , (Οδηγία 2002/98/ΕΚ)
+ 		\item Παρ’ ολίγον συμβάματα (“near miss” events)
+ 		 “σφάλματα που αν δεν ανιχνευθούν θα μπορούσαν να οδηγήσουν σε λανθασμένο προσδιορισμό ομάδας αίματος, αποτυχία
+ 		 ανίχνευσης ενός ερυθροκυτταρικού αντισώματος, ή σε διανομή, συλλογή ή χορήγηση εσφαλμένου ή ακατάλληλου προϊόντος
+ 		 αίματος ”, (Οδηγός, Συμβούλιο της Ευρώπης, Έκδοση 14) 
+ 		 \item Σφάλματα των μεταγγίσεων χωρίς συμβάματα (uneventful tranfusion errors)
+ 		 “η μετάγγιση οποιουδήποτε εσφαλμένου, ακατάλληλου ή μη ενδεικνυόμενου προϊόντος αίματος που δεν προκαλεί βλάβη στον 					λήπτη”(Οδηγός, Συμβούλιο της Ευρώπης, Έκδοση 14η)
+ 		 \end{itemize} 
+		\subsubsection{Οδηγίες Ευρωπαϊκής και WHO}
+		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις 	και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος. Η κοινοποίηση στις αρμόδιες αρχές των σοβαρών ανεπιθυμήτων αντιδράσεων και συμβάντων σχετικά με τη μετάγγιση αίματος απαιτείται από την Ευρωπαϊκή Νομοθεσία (Οδηγία 2005/61/ΕΚ) και κατ’ επέκταση από την Εθνική νομοθεσία κάθε κράτους μέλους της Ευρωπαϊκής Ένωσης με κατάλληλη διαδικασία αναφοράς από τις Υπηρεσίες Αιμοδοσίας και τα Νοσοκομεία, που μεταγγίζουν ασθενείς.  
+		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις 		αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις 	και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος.
+Η κοινοποίηση στις αρμόδιες αρχές των σοβαρών ανεπιθυμήτων αντιδράσεων και συμβάντων σχετικά με τη μετάγγιση αίματος απαιτείται από την Ευρωπαϊκή Νομοθεσία (Οδηγία 2005/61/ΕΚ) και κατ’ επέκταση από την Εθνική νομοθεσία κάθε κράτους μέλους της Ευρωπαϊκής Ένωσης με κατάλληλη διαδικασία αναφοράς από τις Υπηρεσίες Αιμοδοσίας και τα Νοσοκομεία, που μεταγγίζουν ασθενείς.
+ 		 
+
 	\subsection{Haemovigilance στο εξωτερικό}
 	\subsection{Υπόσυστηματα Haemovigilance Ελλάδα}
