Change Bibliography style

--- a/references.bib
+++ b/references.bib
@@ -41,7 +41,7 @@
 }
 
 @Electronic{bloodDonationDefinition,
-  Title                    = {Blood donati},
+  Title                    = {Blood donation},
   Author                   = {Mayo Clinic},
   Language                 = {English},
   Organization             = {Mayo Clinic},
