--- a/thesis.tex
+++ b/thesis.tex
@@ -94,7 +94,8 @@
 
 %%%  Bibliography
 
-\bibliographystyle{Styles/softlab-thesis}
+% \bibliographystyle{Styles/softlab-thesis}
+\bibliographystyle{abbrv}
 \bibliography{references}
 
 
