--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -54,8 +54,8 @@
 
 \section{Κινδυνοι που προκύπτουν μέσα από αιμοδοσία (ασθένειες, ποσοστά)}
 	\subsection{Haemovigilance}
-Με τον όρο αιμοεπαγρύπνηση ορίζουμε ως ένα σύνολο οργανωμένων διαδικασιών επιτήρησης, που σχετίζονται με τα ανεπιθύμητα και μη αναμενόμενα συμβάντα και αντιδράσεις στους δότες και τους λήπτες των προϊόντων του αίματος και με την επιδημιολογική παρακολούθηση των αιμοδοτών. Η αιμοεπαγρύπνηση εστιάζει στις  επιπλοκές των δωρητών αίματος και στις ανεπιθύμητες αντιδράσεις των ληπτών και συμπεριλαμβάνει όλες τις επιπλοκές της “γραμμής παραγωγής αίματος”, τα ανεπιθύμητα συμβάματα, την αναλυτική και αναδρομική καταγραφή των γεγονότων και την προοπτική έγκαιρης προειδοποίησης με χρήση ενός συστήματος ταχείας έγερσης συναγερμών. Η αιμοεπαγρύπνηση είναι ένα ισχυρό εργαλείο το οποίο στοχεύει στην βελτίωση της ποιότητας των διαδικασιών μετάγγισης αίματος, δίνοντας προταιρεότητα στην ασφάλεια. Απώτερος στόχος της αιμοεπαγρύπνησης είναι η πρόληψη ανεπιθύμητων συμβαμάτων και αντιδράσεων. Εισαγάγει μεθόδους εντοπισμού σφαλμάτων, συμβαμάτων και αντιδράσεων και συμπεριλαμβάνει συστημάτα συναγερμού, συστήματα ιχνηλασιμότητας, συστημάτα ειδοποιήσεων και τους ελέγχους των πρακτικών.
-		Οι ουσιαστικοί στόχοι της διαδικασίας της αιμοεπαγρύπνησης είναι οι εξής:
+	Με τον όρο αιμοεπαγρύπνηση ορίζουμε ως ένα σύνολο οργανωμένων διαδικασιών επιτήρησης, που σχετίζονται με τα ανεπιθύμητα και μη αναμενόμενα συμβάντα και αντιδράσεις στους δότες και τους λήπτες των προϊόντων του αίματος και με την επιδημιολογική παρακολούθηση των αιμοδοτών. \cite{VOX:VOX1442}Η αιμοεπαγρύπνηση εστιάζει στις  επιπλοκές των δωρητών αίματος και στις ανεπιθύμητες αντιδράσεις των ληπτών και συμπεριλαμβάνει όλες τις επιπλοκές της “γραμμής παραγωγής αίματος”, τα ανεπιθύμητα συμβάματα, την αναλυτική και αναδρομική καταγραφή των γεγονότων και την προοπτική έγκαιρης προειδοποίησης με χρήση ενός συστήματος ταχείας έγερσης συναγερμών. Η αιμοεπαγρύπνηση είναι ένα ισχυρό εργαλείο το οποίο στοχεύει στην βελτίωση της ποιότητας των διαδικασιών μετάγγισης αίματος, δίνοντας προταιρεότητα στην ασφάλεια. Απώτερος στόχος της αιμοεπαγρύπνησης είναι η πρόληψη ανεπιθύμητων συμβαμάτων και αντιδράσεων. Εισαγάγει μεθόδους εντοπισμού σφαλμάτων, συμβαμάτων και αντιδράσεων και συμπεριλαμβάνει συστημάτα συναγερμού, συστήματα ιχνηλασιμότητας, συστημάτα ειδοποιήσεων και τους ελέγχους των πρακτικών.
+	Οι ουσιαστικοί στόχοι της διαδικασίας της αιμοεπαγρύπνησης είναι οι εξής:
 		\begin{itemize}
 		\item Να προληφθεί η επανεμφάνιση ανεπιθύμητων συμβαμάτων και αντιδράσεων 
 		\item Στη βελτίωση της πρακτικής μετάγγισης στα νοσοκομεία με τη λήψη προληπτικών ή διορθωτικών μέτρων όπου επιβάλλεται 
@@ -64,14 +64,14 @@
 		\item Στην εκπαίδευση των γιατρών που χρησιμοποιούν το αίμα, καθώς και των ασθενών που μεταγγίζονται 
 		\end{itemize}
 
-		Απαραίτητη προυπόθεση για την αποτελεσματική λειτουργία της αιμοεπαγρύπνησης είναι η 	ύπαρξη συστήματος ιχνηλασιμότητας. Ιχνηλασιμότητα ή ανιχνευσιμότητα (traceability) ορίζεται η ικανότητα πλήρους εντοπισμού καθεμίας μονάδας αίματος ή παραγώγων   		της από τον δότη μέχρι τον τελικό αποδέκτη. Επιτυγχάνεται  με ακριβείς και πλήρεις διαδικασίες αναγνώρισης κάθε δότη, κάθε συλλεγόμενης μονάδας αίματος, καθώς και όλων των παραγώγων του, τήρησης αρχείων και επισήμανσης καθώς και πλήρης διαδικασίας επαλήθευσης της παροχής και μετάγγισης αίματος.Με καταγραφή και μελέτη των απαραιτήτων  δεδομένων για την ιχνηλασιμότητα παράγουμε στατιστικά στοιχεία τα οποία αφορούν : στο  σύνολο των ασθενών που έχουν μεταγγισθεί , στις μονάδες ή στα παραγώγα αίματος που  έχουν χρησιμοποιηθεί, στους εθελοντές αιμοδότες που έχουν δώσει τις μονάδες αίμοτος και στα προϊόντα αίματος που μεταγγίσθηκαν. 
-		Τα ανεπιθύμητα συμβάματα τα οποία μπορούν να προκύψουν χωρίζονται στις εξής βασικές 	κατηγορίες:
-	
+		
+	Απαραίτητη προυπόθεση για την αποτελεσματική λειτουργία της αιμοεπαγρύπνησης είναι η 	ύπαρξη συστήματος ιχνηλασιμότητας. Ιχνηλασιμότητα ή ανιχνευσιμότητα (traceability) ορίζεται η ικανότητα πλήρους εντοπισμού καθεμίας μονάδας αίματος ή παραγώγων της από τον δότη μέχρι τον τελικό αποδέκτη. Επιτυγχάνεται  με ακριβείς και πλήρεις διαδικασίες αναγνώρισης κάθε δότη, κάθε συλλεγόμενης μονάδας αίματος, καθώς και όλων των παραγώγων του, τήρησης αρχείων και επισήμανσης καθώς και πλήρης διαδικασίας επαλήθευσης της παροχής και μετάγγισης αίματος.Με καταγραφή και μελέτη των απαραιτήτων  δεδομένων για την ιχνηλασιμότητα παράγουμε στατιστικά στοιχεία τα οποία αφορούν : στο  σύνολο των ασθενών που έχουν μεταγγισθεί , στις μονάδες ή στα παραγώγα αίματος που έχουν χρησιμοποιηθεί, στους εθελοντές αιμοδότες που έχουν δώσει τις μονάδες αίμοτος και στα προϊόντα αίματος που μεταγγίσθηκαν. 
+		Τα ανεπιθύμητα συμβάματα τα οποία μπορούν να προκύψουν χωρίζονται στις εξής βασικές κατηγορίες:
 		\begin{itemize}
 		\item	 Σοβαρή ανεπιθύμητη αντίδραση (Serious Adverse Reaction, SAR)
-		 “μια άνευ προθέσεως αντίδραση του δότη ή του ασθενούς που σχετίζεται με τη συλλογή ή τη μετάγγιση αίματος ή παραγώγων του 			και η οποία είναι θανατηφόρα, απειλητική για τη ζωή, προκαλεί αναπηρία ή ανικανότητα ή έχει ως αποτέλεσμα ή παρατείνει τη 					νοσηλεία ή τη νοσηρότητα”, (Οδηγία 2002/98/ΕΚ)
+		 “μια άνευ προθέσεως αντίδραση του δότη ή του ασθενούς που σχετίζεται με τη συλλογή ή τη μετάγγιση αίματος ή παραγώγων του 			και η οποία είναι θανατηφόρα, απειλητική για τη ζωή, προκαλεί αναπηρία ή ανικανότητα ή έχει ως αποτέλεσμα ή παρατείνει τη νοσηλεία ή τη νοσηρότητα”, (Οδηγία 2002/98/ΕΚ)
  		\\item Σοβαρό ανεπιθύμητο συμβάν (Serious Adverse Event , SAE)
- 		“κάθε ατυχές περιστατικό που σχετίζεται με τη συλλογή, τον έλεγχο, την επεξεργασία, την αποθήκευση και τη διανομή αίματος ή 				παραγώγου του, που θα μπορούσε να προκαλέσει το θάνατο, να απειλήσει τη ζωή, ή να προκαλέσει αναπηρία ή ανικανότητα ή να 				έχει ως αποτέλεσμα ή να παρατείνει τη νοσηλεία ή τη νοσηρότητα” , (Οδηγία 2002/98/ΕΚ)
+ 		“κάθε ατυχές περιστατικό που σχετίζεται με τη συλλογή, τον έλεγχο, την επεξεργασία, την αποθήκευση και τη διανομή αίματος ή 				παραγώγου του, που θα μπορούσε να προκαλέσει το θάνατο, να απειλήσει τη ζωή, ή να προκαλέσει αναπηρία ή ανικανότητα ή να έχει ως αποτέλεσμα ή να παρατείνει τη νοσηλεία ή τη νοσηρότητα” , (Οδηγία 2002/98/ΕΚ)
  		\item Παρ’ ολίγον συμβάματα (“near miss” events)
  		 “σφάλματα που αν δεν ανιχνευθούν θα μπορούσαν να οδηγήσουν σε λανθασμένο προσδιορισμό ομάδας αίματος, αποτυχία
  		 ανίχνευσης ενός ερυθροκυτταρικού αντισώματος, ή σε διανομή, συλλογή ή χορήγηση εσφαλμένου ή ακατάλληλου προϊόντος
@@ -79,11 +79,18 @@
  		 \item Σφάλματα των μεταγγίσεων χωρίς συμβάματα (uneventful tranfusion errors)
  		 “η μετάγγιση οποιουδήποτε εσφαλμένου, ακατάλληλου ή μη ενδεικνυόμενου προϊόντος αίματος που δεν προκαλεί βλάβη στον 					λήπτη”(Οδηγός, Συμβούλιο της Ευρώπης, Έκδοση 14η)
  		 \end{itemize} 
+ 	Κάθε σοβαρό ανεπιθύμητο συμβάν θα πρέπει να περιγράφεται ανάλογα με την σοβαρότητα του. Για αυτόν τον σκοπό αυτό, έχει καθιερωθεί μία διεθνώς αποδεκτή κλίμακα ταξινόμησης. Η εύρεση της αιτιακής συσχέτισης μεταξύ ανεπιθύμητης αντίδρασης και μετάγγισης, έχει πολύ μεγάλη σημασία, καθώς έτσι μπορούμε να αναγνωρίσουμε αν ευθύνεται κάποιο συστατικό του αίματος ή όχι. Υπάρχουν πολλοί διαφορετικοί τύποι αντιδράσεων μετάγγισης. Η πιο κοινή υποδιαίρεση που χρησιμοποιείται είναι η ταξινόμηση με βάση την εμφάνιση των αντιδράσεων σε οξείες (λιγότερο από 24 ώρες μετά) και καθυστερημένες (περισσότερο από 24 ώρες μετά την μετάγγιση) αντιδράσεις.
+ 	 Σύμφωνα με την παθογένεση τους, οι ανεπιθύμητες ενέργειες μπορεί να διαιρεθεί σε λοιμώδη και μη λοιμώδη ανεπιθύμητες αντιδράσεις. Μη λοιμώδη οξείες αντιδράσεις περιλαμβάνουν οξείες αιμολυτικές αντιδράσεις μετάγγισης (AHTR), Φε- ενοχλήσουν τους μη αιμολυτικές αντιδράσεις μετάγγισης (FNHTR), αλλεργικές αντιδράσεις συμπεριλαμβανομένων αναφυλακτικών αντιδράσεων, σχετίζεται transfusion- οξύ τραυματισμό πνεύμονα (TRALI), σχετίζονται με τη μετάγγιση υπερφόρτωση του κυκλοφορικού συστήματος (TACO) , υποτασική αντιδράσεις και υπερκαλιαιμία. Μη λοιμώδη καθυστερημένες αντιδράσεις μετάγγισης περιλαμβάνουν όψιμη αιμολυτικές αντιδράσεις μετάγγισης (DHTR), καθυστέρησε ορολογικές αντιδράσεις μετάγγισης (DSTR), μετά τη μετάγγιση πορφύρα (PTP), σχετίζονται με τη μετάγγιση νόσο μοσχεύματος έναντι ξενιστή (TAGVHD) και αιμοσιδήρωση.
+Τα κύρια οξεία λοιμώδης ανεπιθύμητες αντιδράσεις οφείλονται σε βακτηριακή μόλυνση του συστατικού του αίματος, και καθυστερημένη λοιμώδεις αντιδράσεις μπορεί να οφείλεται σε ιική (π.χ. ηπατίτιδα B / C, HIV) ή παρασιτικές (π.χ. ελονοσία) μετάδοσης.
+Για τις συγκρίσεις και να καθορίσει τις προτεραιότητες για τις παρεμβάσεις για τη βελτίωση της ασφάλειας των μεταγγίσεων, κάποιος πρέπει να γνωρίζουν τις τιμές στις οποίες πραγματοποιούνται διάφορες αντιδράσεις.
+Για να είναι σε θέση να ανταλλάσσουν πληροφορίες και να συγκρίνουν τα δεδομένα, έχουν διεθνώς αποδεκτοί ορισμοί για παρενεργειών των σε λήπτες έχουν αναπτυχθεί (βλέπε http: // www.isbt-web.org/documentation ή / και http:. // Www ΛΑΝ -org.net: ΛΑΝ-ISBT ορισμό WP HV εγκρίθηκε το 2006).
+Επιπλοκή σε ένα δότη
+Από πρόσφατα, ο δότης έχει λάβει τη δέουσα προσοχή σε προγράμματα αιμοεπαγρύπνηση. Οι ανεπιθύμητες ενέργειες σε ένα δότη που ονομάζεται επιπλοκές, επειδή τόσο η ρύθμιση και η αιτιολογία είναι εντελώς διαφορετικές από εκείνες σε έναν δέκτη. Χωρίζονται σε τοπικές αντιδράσεις που σχετίζονται με την εισαγωγή της βελόνας (τραυματισμοί σκάφος, τραυματισμοί νεύρων, άλλα), γενικές αντιδράσεις (παρασυμπαθητικομιμητικές άμεσων όσο και απώτερων τύπου) και πάνω από 10 σπάνια αλλά σημαντική άλλες επιπλοκές. Η σοβαρότητα και η δυνατότητα καταλογισμού των επιπλοκών δότη βαθμολογούνται σύμφωνα με μια άλλη, αλλά συγκρίσιμη κλίμακα που χρησιμοποιείται για ανεπιθύμητες ενέργειες στους λήπτες. Η κλίμακα αυτή είναι επίσης διεθνώς αποδεκτά [5] (βλέπε http://www.isbt-web.org/ members_only / αρχεία / κοινωνίας / StandardSurveillanceDOCO. Pdf). Επίσης, οι επιπλοκές του δότη πρέπει να αναφέρονται ως ποσοστά, προκειμένου να γίνουν συγκρίσεις και για τον καθορισμό των προτεραιοτήτων για τις παρεμβάσεις.	 
 		\subsubsection{Οδηγίες Ευρωπαϊκής και WHO}
 		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις 	και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος. Η κοινοποίηση στις αρμόδιες αρχές των σοβαρών ανεπιθυμήτων αντιδράσεων και συμβάντων σχετικά με τη μετάγγιση αίματος απαιτείται από την Ευρωπαϊκή Νομοθεσία (Οδηγία 2005/61/ΕΚ) και κατ’ επέκταση από την Εθνική νομοθεσία κάθε κράτους μέλους της Ευρωπαϊκής Ένωσης με κατάλληλη διαδικασία αναφοράς από τις Υπηρεσίες Αιμοδοσίας και τα Νοσοκομεία, που μεταγγίζουν ασθενείς.  
-		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις 		αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις 	και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος.
-Η κοινοποίηση στις αρμόδιες αρχές των σοβαρών ανεπιθυμήτων αντιδράσεων και συμβάντων σχετικά με τη μετάγγιση αίματος απαιτείται από την Ευρωπαϊκή Νομοθεσία (Οδηγία 2005/61/ΕΚ) και κατ’ επέκταση από την Εθνική νομοθεσία κάθε κράτους μέλους της Ευρωπαϊκής Ένωσης με κατάλληλη διαδικασία αναφοράς από τις Υπηρεσίες Αιμοδοσίας και τα Νοσοκομεία, που μεταγγίζουν ασθενείς.
- 		 
+		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος. Οι αναφορές αυτές περιλαμβάνουν πληροφορίες για την κλινική έκβαση των αντιδράσεων και τα μέτρα που έλαβαν οι υπεύθυνοι, σε σχέση με τα άλλα παράγωγα του αίματος που μεταγγίστηκαν, καθώς και τον προσδιορισμό των σοβαρών συμβάντων εξαιτίας ελαττωματικού προϊόντος, εξοπλισμού, ανθρώπινου λάθους και άλλων προβλημάτων.\cite{cite-revekka} Οι μη σοβαρές αντιδράσεις καθώς και άλλα λάθη τα οποία συμβαίνουν κατά την μετάγγιση αίματος δεν αποτελούν αντικείμενο για αναφορά σύμφωνα με τις οδηγίες της Ευρωπαϊκής Ένωσης.
+		Για την πλήρη και ορθή γνωστοποίηση όλων των άνωθεν πληροφοριών είναι απαραίτητη η ανάπτυξη ολοκληρωμένων πληροφοριακών συστημάτων αιμοεπαγρύπνησης. Για την εφαρμογή ενός συστήματος αιμοεπαγρύπνησης πρέπει να δημιουργούνται λειτουργικοί σύνδεσμοι μεταξύ των Κλινικών τμημάτων, των Κέντρων Αιμοδοσίας, των νοσοκομειακών υπηρεσιών Αιμοδοσίας και των αρμόδιων εθνικών αρχών. Τα αποτελέσματα της ανάλυσης των δεδομένων που προκύπτουν από τα συστήματα αιμοεπαγρύπνησης πρέπει να ανατροφοδοτούνται περιοδικα σε εκείνους, που παρείχαν τα πρωτογενή δεδομένα και στις αρμόδιες αρχές.
+		
 
 	\subsection{Haemovigilance στο εξωτερικό}
 	\subsection{Υπόσυστηματα Haemovigilance Ελλάδα}
