Blood donation 2.1  1st draft

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -27,7 +27,16 @@
 		
 		Η καλή επικοινωνία μεταξύ του αιμοδότη και του προσωπικού της αιμοδοσίας διατηρεί τη σχέση εμπιστοσύνης και διασφαλίζει την καλή ποιότητα του αίματος που παρέχεται στους ασθενείς που χρειάζονται αίμα και τα παράγωγά του. Αίμα μπορούν να δώσουν όλοι οι υγιείς άντρες και γυναίκες ηλικίας 18 - 62 ετών, κάθε 3 - 4 μήνες. 
 		\subsubsection{Κατηγορίες αιμοδοτών}
-			NVD,LVD,RVD
+			Οι αιμοδότες μπορούν να χωριστούν σε τρεις μεγάλες κατηγορίες:
+\begin{enumerate}
+	\item Οι εθελοντές αιμοδότες (Volunteer Donors - VDs) οι οποίοι αιμοδοτούν με δική τους πρωτοβουλία καθαρά για ανθρωπιστικούς λόγους, χωρίς να λαμβάνουν κάποιο οικονομικό αντάλλαγμα ή οτιδήποτε που θα μπορούσε να θεωρηθεί ως αντικαταστατό του χρήματος.
+	\item Οι δότες αντικατάστασης (Replacement Donors - RDs), οι οποίοι αιμοδοτούν προκειμένου να καλύψουν τις ανάγκες που προκύπτουν από συγγενείς ή φίλους οι οποίοι νοσηλεύονται.
+	\item Δότες αίματος επί πληρωμή οι οποίοι λαμβάνουν πληρωμή από την οικογένεια η οποία δεν μπορεί να παρέχει η ιδία δότη αντικατάστασης για το συγγενικό τους πρόσωπο.
+\end{enumerate} 
+
+Σε αυτό το σημείο ότι η τρίτη κατηγορία αιμοδοτών εμφανίζεται μόνο σε τριτοκοσμικές χώρες και κυρίως σε χώρες της Αφρικής. Στατιστικά στοιχεία έχουν δείξει ότι οι τακτικοί εθελοντές αιμοδότες (VDs) σχετίζονται με ασφαλέστερες παροχές αίματος σε σχέση με τους δότες αντικατάστασης όσον αφορά τις μεταδιδόμενες κατά την μετάγγιση ασθένειες \cite{Liu1998}.
+
+Στοιχεία του Παγκόσμιου Οργανισμού Υγείας (WHO) και του Συμβουλίου της Ευρώπης υποδεικνύουν ότι το αίμα και τα παράγωγα του αίματος θα πρέπει να συλλέγονται αποκλειστικά από τακτικούς μη αμειβόμενους εθελοντές \cite{VOX:VOX5295}. Τα συστήματα αιμοδοσίας τα οποία στηρίζονται στους εθελοντές αιμοδότες οι οποίοι δίνουν αίμα σε σταθερή βάση, έχουν τη δυνατότητα να διαχειριστούν καλύτερα τις παροχές αίματος και να προγραμματίσουν τις μεταγγίσεις, επιταχύνοντας την όλη διαδικασία. Τέλος, από ηθική άποψη, δεν είναι σωστό να αναγκάζονται οι συγγενείς ενός ασθενούς σε ανάγκη, να αναζητούν κάτω από ψυχολογική πίεση άτομα για να προσφέρουν αίμα προκειμένου να καλυφθούν οι ανάγκες του δικού τους ανθρώπου.
 	\subsection{Ανάγκες μονάδων αίματος}		
 	\subsection{Εθελοντική αιμοδοσία στην Ελλάδα}
 		Στην Ελλάδα το "Εθνικό Κέντρο Αιμοδοσίας" (Ε.ΚΕ.Α) το οποίο στεγάζεται στο Υπουργείο Υγείας και Πρόνοιας αποτελεί το κεντρικό όργανο για την οργάνωση των Υπηρεσιών Αιμοδοσίας. Οι Υπηρεσίες Αιμοδοσίας μπορούν να διαχωριστούν στις παρακάτω τρεις κατηγορίες: 1) τα Κέντρα Αιμοδοσίας, 2) τους Σταθμούς Αιμοδοσίας Α' Τάξης και 3) τους Σταθμούς Αιμοδοσίας Β' Τάξης. Τα κέντρα Αιμοδοσίας καλύπτουν τις ανάγκες μιας ευρύτερης γεωγραφικής περιοχής ή μεγάλων πληθυσμιακών ομάδων και εδρεύουν σε νοσοκομεία. Οι Σταθμοί Αιμοδοσίας Α' Τάξης είναι μικρότερες υπηρεσίες και καλύπτουν τις ανάγκες του νοσοκομείου στο οποίο εδρεύουν και άλλες τοπικές ανάγκες. Οι Σταθμοί Αιμοδοσίας Β' Τάξης καλύπτουν αποκλειστικά τις ανάγκες του νοσοκομείου που στεγάζονται.
@@ -41,6 +50,18 @@
 		Βάση επίσημων στοιχείων, η Ελλάδα διαθέτει έναν ευρύ κατάλογο αιμοδοτών βάσει του οποίου 6 αιμοδότες αντιστοιχούν σε 100 πολίτες, γεγονός που την κατατάσσει τρίτη ανάμεσα στις χώρες- μέλη της Ευρωπαϊκής Ένωσης όσον αφορά τον αριθμό των ατόμων οι οποίοι έχουν δωρίσει αίμα έστω και μία φορά στη ζωή τους  (Eurobarometer, 2009).  Επίσης, η Ελλάδα έρχεται πρώτη όσον αφορά τους μη αιμοδότες, οι οποίοι όμως έχουν σκεφτεί να δώσουν αίμα (Eurobarometer, 2005). Παρόλα τα στοιχεία αυτά όμως, η Ελλάδα που είναι μία χώρα 11.000.000 κατοίκων, πολύ συχνά βρίσκεται στη δυσάρεστη αλλά αναπόφευκτη θέση να εισάγει αίμα από το εξωτερικό, καθώς ο ετήσιος αριθμός μονάδων αίματος δεν επαρκεί για να καλυφθούν οι ανάγκες της χώρας. Αυτό συμβαίνει λόγω των υψηλών ποσοστών μεσογειακής αναιμίας όπως αναφέραμε και παραπάνω αλλά και λόγω ότι οι ανάγκες αίματος κατά τη διάρκεια διάφορων χειρουργικών επεμβάσεων είναι μεγαλύτερη στην Ελλάδα από ότι σε άλλες χώρες της Κεντρικής και Βόρειας Ευρώπης, όπως προκύπτει από την έρευνα του ασφαλούς και
 καλού αίματος \cite{Grindon1996} και προσπάθειες να ελαχιστοποιηθεί αυτή η αλόγιστη χρήση έχουν αποβεί προς το παρόν άκαρπες. 
 
+Όπως γίνεται εμφανές από τα δεδομένα που παρουσιάσαμε παραπάνω, η Ελλάδα όπως και οι περισσότερες χώρες της Ευρώπης πρέπει να καθορίσουν μια στρατηγική με στόχο την αύξηση των τακτικών εθελοντών αιμοδοτών και κατ'επέκταση των μονάδων αίματος που συλλέγονται κάθε χρόνο. Η στρατιγική αυτή θα πρέπει να έχει ως κύριο άξονα την αύξηση των εθελοντών αιμοδοτών (VDs) και σταδιακή απογαλάκτιση από τους δότες αντικατάστασης (RDs) για τους λόγους που αναφέραμε στην παραπάνω ενότητα (κατηγορίες εθελοντών αιμοδοτών).
+
+Η ευρύτατη εφαρμογή των μεταγγίσεων, σε συνάρτηση με τις δυσκολίες εξασφάλισης των απαιτούμενων ποσοτήτων αίματος για την κάλυψη των αναγκών, δημιουργούν ένα οξύ ιατρο-κοινωνικό πρόβλημα το οποίο απασχολεί τους υπέυθυνους φορείς υγείας ανά τον κόσμο. Η έλλειψη αίματος συνεπάγεται αναβολές χειρουργικών επεμβάσεων, παράταση της παραμονής των ασθενών στα νοσοκομεία, απώλεια εισοδημάτων από την επιβράδυνση της θεραπείας, καθώς και ευρύτερες ψυχολογικές και κοινωνικές επιπτώσεις, οι οποίες επιβαρύνουν τόσο τους ίδιους τους ασθενείς, όσο και το οικογενειακό τους περιβάλλον. Η αντιμετώπιση του προβλήματος απαιτεί την εφαρμογή Εθνικής Αιμοδοτικής Πολιτικής, που στηριζόμενη σε αρχές μη κερδοσκοπικού μάρκετινγκ, θα αποσκοπεί κυρίως στην ενημέρωση και την ευαισθητοποίηση του κοινού ως προς την εθελοντική αιμοδοσία \cite{Politis} \cite{Marantidou2007}.
+
+Επομένως, η προσπάθεια του συστήματος αιμοδοσίας στην Ελλάδα πρέπει να έχει δύο βασικούς στόχους οι οποίοι και ταυτίζονται με τους στόχους του συστήματος μας όπως περιγράφηκαν στο κεφάλαιο 1 της παρούσας διπλωματικη εργασίας.
+\begin{enumerate}
+	\item Τη συνολική αύξηση των μονάδων αίματος που συλλέγονται για να διασφαλιστεί η αυτάρκεια στην παροχή αίματος 
+	\item Τη μετατροπή των αιμοδοτών αντικατάστασης σε τακτικούς εθελοντές αιμοδότες, προκειμένου να αυξηθεί η ασφάλεια του αίματος και να διευκολυνθεί η διαχείριση των διαθέσιμων μονάδων αίματος και των παραγώγων του
+	\item Τη στρατολόγηση νέων εθελοντών αιμοδοτών με έμφαση σε άτομα τις νεαρής ηλικίας.
+\end{enumerate}
+
+Τέλος, θα πρέπει να τονιστεί η επιτακτική ανάγκη για πραγματοποίηση τόσο οργανωτικών, όσο και επιστημονικών αλλαγών στη χώρα μας στο εγγύς μέλλον, οι οποίες θα μπορέσουν οδηγήσουν με γοργούς ρυθμούς, στην επίτευξη του πρωταρχικού στόχου, δηλαδή στην επίτευξη αυτάρκειας σε αίμα και παράγωγα αίματος. Μία επάρκεια η οποία θα πρέπει να προέρχεται αποκλειστικά και μόνο από Εθελοντική Αιμοδοσία. Στην κατεύθυνση αυτή είναι και το ολοκληρωμένο πληροφοριακό σύστημα που μελετήθηκε και υλοποιήθηκε στην παρούσα διπλωματική εργασία.
 
 \section{Πληροφοριακά συστήματα αιμοδοσίας}
 	\subsection{Κατασταση στο εξωτερικο}
@@ -70,7 +91,7 @@
 		\begin{itemize}
 		\item	 Σοβαρή ανεπιθύμητη αντίδραση (Serious Adverse Reaction, SAR)
 		 “μια άνευ προθέσεως αντίδραση του δότη ή του ασθενούς που σχετίζεται με τη συλλογή ή τη μετάγγιση αίματος ή παραγώγων του 			και η οποία είναι θανατηφόρα, απειλητική για τη ζωή, προκαλεί αναπηρία ή ανικανότητα ή έχει ως αποτέλεσμα ή παρατείνει τη νοσηλεία ή τη νοσηρότητα”, (Οδηγία 2002/98/ΕΚ)
- 		\\item Σοβαρό ανεπιθύμητο συμβάν (Serious Adverse Event , SAE)
+ 		\item Σοβαρό ανεπιθύμητο συμβάν (Serious Adverse Event , SAE)
  		“κάθε ατυχές περιστατικό που σχετίζεται με τη συλλογή, τον έλεγχο, την επεξεργασία, την αποθήκευση και τη διανομή αίματος ή 				παραγώγου του, που θα μπορούσε να προκαλέσει το θάνατο, να απειλήσει τη ζωή, ή να προκαλέσει αναπηρία ή ανικανότητα ή να έχει ως αποτέλεσμα ή να παρατείνει τη νοσηλεία ή τη νοσηρότητα” , (Οδηγία 2002/98/ΕΚ)
  		\item Παρ’ ολίγον συμβάματα (“near miss” events)
  		 “σφάλματα που αν δεν ανιχνευθούν θα μπορούσαν να οδηγήσουν σε λανθασμένο προσδιορισμό ομάδας αίματος, αποτυχία
@@ -83,9 +104,12 @@
  	 Σύμφωνα με την παθογένεση τους, οι ανεπιθύμητες ενέργειες μπορεί να διαιρεθεί σε λοιμώδη και μη λοιμώδη ανεπιθύμητες αντιδράσεις. Μη λοιμώδη οξείες αντιδράσεις περιλαμβάνουν οξείες αιμολυτικές αντιδράσεις μετάγγισης (AHTR), Φε- ενοχλήσουν τους μη αιμολυτικές αντιδράσεις μετάγγισης (FNHTR), αλλεργικές αντιδράσεις συμπεριλαμβανομένων αναφυλακτικών αντιδράσεων, σχετίζεται transfusion- οξύ τραυματισμό πνεύμονα (TRALI), σχετίζονται με τη μετάγγιση υπερφόρτωση του κυκλοφορικού συστήματος (TACO) , υποτασική αντιδράσεις και υπερκαλιαιμία. Μη λοιμώδη καθυστερημένες αντιδράσεις μετάγγισης περιλαμβάνουν όψιμη αιμολυτικές αντιδράσεις μετάγγισης (DHTR), καθυστέρησε ορολογικές αντιδράσεις μετάγγισης (DSTR), μετά τη μετάγγιση πορφύρα (PTP), σχετίζονται με τη μετάγγιση νόσο μοσχεύματος έναντι ξενιστή (TAGVHD) και αιμοσιδήρωση.
 Τα κύρια οξεία λοιμώδης ανεπιθύμητες αντιδράσεις οφείλονται σε βακτηριακή μόλυνση του συστατικού του αίματος, και καθυστερημένη λοιμώδεις αντιδράσεις μπορεί να οφείλεται σε ιική (π.χ. ηπατίτιδα B / C, HIV) ή παρασιτικές (π.χ. ελονοσία) μετάδοσης.
 Για τις συγκρίσεις και να καθορίσει τις προτεραιότητες για τις παρεμβάσεις για τη βελτίωση της ασφάλειας των μεταγγίσεων, κάποιος πρέπει να γνωρίζουν τις τιμές στις οποίες πραγματοποιούνται διάφορες αντιδράσεις.
-Για να είναι σε θέση να ανταλλάσσουν πληροφορίες και να συγκρίνουν τα δεδομένα, έχουν διεθνώς αποδεκτοί ορισμοί για παρενεργειών των σε λήπτες έχουν αναπτυχθεί (βλέπε http: // www.isbt-web.org/documentation ή / και http:. // Www ΛΑΝ -org.net: ΛΑΝ-ISBT ορισμό WP HV εγκρίθηκε το 2006).
+Για να είναι σε θέση να ανταλλάσσουν πληροφορίες και να συγκρίνουν τα δεδομένα, έχουν διεθνώς αποδεκτοί ορισμοί για παρενεργειών των σε λήπτες έχουν αναπτυχθεί 
+%(βλέπε http: // www.isbt-web.org/documentation ή / και http:. // Www ΛΑΝ -org.net: ΛΑΝ ISBT ορισμό WP HV εγκρίθηκε το 2006).
 Επιπλοκή σε ένα δότη
-Από πρόσφατα, ο δότης έχει λάβει τη δέουσα προσοχή σε προγράμματα αιμοεπαγρύπνηση. Οι ανεπιθύμητες ενέργειες σε ένα δότη που ονομάζεται επιπλοκές, επειδή τόσο η ρύθμιση και η αιτιολογία είναι εντελώς διαφορετικές από εκείνες σε έναν δέκτη. Χωρίζονται σε τοπικές αντιδράσεις που σχετίζονται με την εισαγωγή της βελόνας (τραυματισμοί σκάφος, τραυματισμοί νεύρων, άλλα), γενικές αντιδράσεις (παρασυμπαθητικομιμητικές άμεσων όσο και απώτερων τύπου) και πάνω από 10 σπάνια αλλά σημαντική άλλες επιπλοκές. Η σοβαρότητα και η δυνατότητα καταλογισμού των επιπλοκών δότη βαθμολογούνται σύμφωνα με μια άλλη, αλλά συγκρίσιμη κλίμακα που χρησιμοποιείται για ανεπιθύμητες ενέργειες στους λήπτες. Η κλίμακα αυτή είναι επίσης διεθνώς αποδεκτά [5] (βλέπε http://www.isbt-web.org/ members_only / αρχεία / κοινωνίας / StandardSurveillanceDOCO. Pdf). Επίσης, οι επιπλοκές του δότη πρέπει να αναφέρονται ως ποσοστά, προκειμένου να γίνουν συγκρίσεις και για τον καθορισμό των προτεραιοτήτων για τις παρεμβάσεις.	 
+Από πρόσφατα, ο δότης έχει λάβει τη δέουσα προσοχή σε προγράμματα αιμοεπαγρύπνηση. Οι ανεπιθύμητες ενέργειες σε ένα δότη που ονομάζεται επιπλοκές, επειδή τόσο η ρύθμιση και η αιτιολογία είναι εντελώς διαφορετικές από εκείνες σε έναν δέκτη. Χωρίζονται σε τοπικές αντιδράσεις που σχετίζονται με την εισαγωγή της βελόνας (τραυματισμοί σκάφος, τραυματισμοί νεύρων, άλλα), γενικές αντιδράσεις (παρασυμπαθητικομιμητικές άμεσων όσο και απώτερων τύπου) και πάνω από 10 σπάνια αλλά σημαντική άλλες επιπλοκές. Η σοβαρότητα και η δυνατότητα καταλογισμού των επιπλοκών δότη βαθμολογούνται σύμφωνα με μια άλλη, αλλά συγκρίσιμη κλίμακα που χρησιμοποιείται για ανεπιθύμητες ενέργειες στους λήπτες. Η κλίμακα αυτή είναι επίσης διεθνώς αποδεκτά [5] 
+%(βλέπε http://www.isbt-web.org/ members_only / αρχεία / κοινωνίας / StandardSurveillanceDOCO. Pdf).
+ Επίσης, οι επιπλοκές του δότη πρέπει να αναφέρονται ως ποσοστά, προκειμένου να γίνουν συγκρίσεις και για τον καθορισμό των προτεραιοτήτων για τις παρεμβάσεις.	 
 		\subsubsection{Οδηγίες Ευρωπαϊκής και WHO}
 		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις 	και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος. Η κοινοποίηση στις αρμόδιες αρχές των σοβαρών ανεπιθυμήτων αντιδράσεων και συμβάντων σχετικά με τη μετάγγιση αίματος απαιτείται από την Ευρωπαϊκή Νομοθεσία (Οδηγία 2005/61/ΕΚ) και κατ’ επέκταση από την Εθνική νομοθεσία κάθε κράτους μέλους της Ευρωπαϊκής Ένωσης με κατάλληλη διαδικασία αναφοράς από τις Υπηρεσίες Αιμοδοσίας και τα Νοσοκομεία, που μεταγγίζουν ασθενείς.  
 		Όλες οι υπηρεσίες αιμοδοσίας και τα νοσοκομεία, υποχρεώνονται να κοινοποιούν στις αρμόδιες αρχές με κατάλληλη διαδικασία αναφοράς τις σοβαρές ανεπιθύμητες αντιδράσεις και συμβάματα τα οποία σχετίζονται με τη μετάγγιση αίματος. Οι αναφορές αυτές περιλαμβάνουν πληροφορίες για την κλινική έκβαση των αντιδράσεων και τα μέτρα που έλαβαν οι υπεύθυνοι, σε σχέση με τα άλλα παράγωγα του αίματος που μεταγγίστηκαν, καθώς και τον προσδιορισμό των σοβαρών συμβάντων εξαιτίας ελαττωματικού προϊόντος, εξοπλισμού, ανθρώπινου λάθους και άλλων προβλημάτων.\cite{cite-revekka} Οι μη σοβαρές αντιδράσεις καθώς και άλλα λάθη τα οποία συμβαίνουν κατά την μετάγγιση αίματος δεν αποτελούν αντικείμενο για αναφορά σύμφωνα με τις οδηγίες της Ευρωπαϊκής Ένωσης.
