Add figure structure for chapter 2

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -1,3 +1,5 @@
+\graphicspath{ {Figures/blood_donation/} }
+
 \chapter{Εθελοντική αιμοδοσία}\label{ch:Βlood Donations}
 
 \section{Εθελοντική αιμοδοσία}
